--- a/index.html
+++ b/index.html
@@ -60,14 +60,13 @@
                             </a>
                         </li>
                     </ul>
-                    <ul>
-                        <li>
-                            <a class="btn btn-danger" href="#">
-                                <i class="fa fa-trash-o fa-lg"></i> Delete</a>
-                        </li>
-                    </ul>
                 </nav>
                 <p>C#, Real-time computing, Event sourcing, Triathlete, Father</p>
+                <ul>
+                    <li>
+                        <a class="btn" href="#">Blog</a>
+                    </li>
+                </ul>
             </header>
 
             <!-- Footer -->
