--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <p>C#, Real-time computing, Event sourcing, Triathlete, Father</p>
                 <ul>
                     <li>
-                        <a class="btn btn-large btn-primary" href="#">Blog</a>
+                        <a class="fa-twitter" href="#">Blog</a>
                     </li>
                 </ul>
             </header>
