--- a/index.html
+++ b/index.html
@@ -62,11 +62,8 @@
                     </ul>
                 </nav>
                 <p>C#, Real-time computing, Event sourcing, Triathlete, Father</p>
-                <ul>
-                    <li>
-                        <a class="button special" href="#">Blog</a>
-                    </li>
-                </ul>
+                <br>
+                <a class="btn btn-primary" href="#">Blog</a>
             </header>
 
             <!-- Footer -->
