--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/style-wide.css" />
         <link rel="stylesheet" href="css/style-noscript.css" />
-
     </noscript>
     <!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
     <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
@@ -63,7 +62,9 @@
                 </nav>
                 <p>C#, Real-time computing, Event sourcing, Triathlete, Father</p>
                 <br>
-                <a class="btn btn-primary" href="#">Blog</a>
+                <div class=action>
+                    <a href="mailto:luca.bonini@hotmail.com" id=blog>Blog</a>
+                </div>                
             </header>
 
             <!-- Footer -->
