change blog link

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <p>C#, Real-time computing, Event sourcing, Triathlete, Father</p>
                 <br>
                 <div class=action>
-                    <a href="https://giganoide.github.io/_jekyll/index.html" id=blog>Blog</a>
+                    <a href="_jekyll/index.html" id=blog>Blog</a>
                 </div>                
             </header>
 
